--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -230,14 +230,18 @@
 
   <!--#endif-->
   <ItemGroup>
-    <!--#if (CentralPkgMgmt)-->    
+    <!--#if (CentralPkgMgmt)-->
     <PackageReference Include="Fabulous" />
     <PackageReference Include="Fabulous.MauiControls" />
     <PackageReference Include="FSharp.Core" />
     <!--#else-->
-    <PackageReference Include="Fabulous" Version="2.4.*" />
-    <PackageReference Include="Fabulous.MauiControls" Version="2.8.*" />
-    <PackageReference Include="FSharp.Core" Version="7.0.*" />
+    <PackageReference Include="Fabulous" Version="2.*" />
+    <PackageReference Include="Fabulous.MauiControls" Version="2.*" />
+    <!--#if (Net8OrLater)-->
+    <PackageReference Include="FSharp.Core" Version="8.*" />
+    <!--#else-->
+    <PackageReference Include="FSharp.Core" Version="7.*" />
+    <!--#endif-->
     <!--#endif-->
   </ItemGroup>
 
@@ -246,11 +250,7 @@
   <!--#endif-->
   <!--#if (CentralPkgMgmt)-->
   <!--#if (AddFoldablePackage)-->
-  <!--#if (Net8)-->
     <PackageReference Include="Microsoft.Maui.Controls.Foldable" />
-  <!--#else-->
-    <PackageReference Include="Microsoft.Maui.Controls.Foldable" />
-  <!--#endif-->
   <!--#endif-->
   <!--#if (AddMapsPackage)-->
     <PackageReference Include="Fabulous.MauiControls.Maps" />
@@ -289,6 +289,9 @@
   <!--#if (AddMvvmToolkitPackage)-->
     <PackageReference Include="CommunityToolkit.Mvvm" />
   <!--#endif-->
+  <!--#if (AddSharedToolkit)-->
+    <PackageReference Include="VijayAnand.Toolkit.Markup" />
+  <!--#endif-->
   <!--#else-->
   <!--#if (AddFoldablePackage)-->
   <!--#if (Net8)-->
@@ -311,14 +314,26 @@
   <!--#endif-->
     <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+  <!--#if (AddToolkitPackage)-->
+    <PackageReference Include="CommunityToolkit.Maui" Version="7.*" />
+  <!--#endif-->
+  <!--#if (AddMarkupPackage)-->
+    <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
+  <!--#endif-->
+  <!--#if (AddSharedToolkit)-->
+    <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.*" />
+  <!--#endif-->
   <!--#else-->
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.*" Condition="'$(Configuration)' == 'Debug'" />
-  <!--#endif-->
   <!--#if (AddToolkitPackage)-->
     <PackageReference Include="CommunityToolkit.Maui" Version="6.*" />
   <!--#endif-->
   <!--#if (AddMarkupPackage)-->
     <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*" />
+  <!--#endif-->
+  <!--#if (AddSharedToolkit)-->
+    <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.*" />
+  <!--#endif-->
   <!--#endif-->
   <!--#if (AddMediaPackage)-->
     <PackageReference Include="Fabulous.MauiControls.MediaElement" Version="2.*" />
@@ -329,6 +344,9 @@
   <!--#endif-->
   <!--#if (AddMarkupPackage)-->
     <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.*" />
+  <!--#endif-->
+  <!--#if (AddSharedToolkit)-->
+    <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.*" />
   <!--#endif-->
   <!--#endif-->
   <!--#if (AddMvvmToolkitPackage)-->
