--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -150,7 +150,7 @@
     <ItemGroup>
     <!--#endif-->
         <!--#if (CentralPkgMgmt)-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <!--#if (UseMauiCore)-->
         <PackageReference Include="Microsoft.Maui.Core" />
         <!--#elif (UseMauiEssentials)-->
@@ -163,26 +163,20 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (Net7OrLater)-->
         <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
-        <!--#endif-->
-        <!--#else-->
-        <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" />
-        <!--#endif-->
-        <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" />
-        <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageReference Include="VijayAnand.Toolkit.Markup" />
+        <!--#endif-->
         <!--#else-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <!--#if (UseMauiCore)-->
         <PackageReference Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
         <!--#elif (UseMauiEssentials)-->
@@ -193,14 +187,25 @@
         <!--#endif-->
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+        <!--#if (AddToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="7.*" />
+        <!--#endif-->
+        <!--#if (AddMarkupPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (Net7OrLater)-->
+        <!--#elif (Net7)-->
         <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="6.*" />
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageReference Include="VijayAnand.Toolkit.Markup" Version="2.*" />
         <!--#endif-->
         <!--#else-->
         <!--#if (AddToolkitPackage)-->
@@ -208,6 +213,9 @@
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.*" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
