--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -3,7 +3,7 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
     <ItemGroup>
-        <PackageVersion Include="Xamarin.Forms" Version="5.0.0.2612" />
+        <PackageVersion Include="Xamarin.Forms" Version="5.0.0.2622" />
         <!--#if (AddFormsEssentials)-->
         <PackageVersion Include="Xamarin.Essentials" Version="1.8.0" />
         <!--#endif-->
@@ -13,31 +13,37 @@
         <!--#if (AddFormsMarkup)-->
         <PackageVersion Include="Xamarin.CommunityToolkit.Markup" Version="2.0.6" />
         <!--#endif-->
-        <!--#if (AddSharedToolkit)-->
-        <!--#if (Net8)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.0.0" />
-        <!--#elif (Net7)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.1.0" />
-        <!--#else-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.1.0" />
-        <!--#endif-->
-        <!--#endif-->
-        <!--#if (Net8)-->
+        <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-        <!--#endif-->
         <!--#if (AddMauiToolkit)-->
-        <!--#if (Net7OrLater)-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
-        <!--#else-->
-        <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
-        <!--#endif-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="7.0.0" />
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
-        <!--#if (Net7OrLater)-->
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.0.0" />
+        <!--#endif-->
+        <!--#elif (Net7)-->
+        <!--#if (AddMauiToolkit)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="6.1.0" />
+        <!--#endif-->
+        <!--#if (AddMauiMarkup)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="3.3.1" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="2.1.0" />
+        <!--#endif-->
         <!--#else-->
+        <!--#if (AddMauiToolkit)-->
+        <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
+        <!--#endif-->
+        <!--#if (AddMauiMarkup)-->
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
+        <!--#endif-->
+        <!--#if (AddSharedToolkit)-->
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="1.1.0" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkit)-->
