--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -94,6 +94,9 @@
 
     <!-- .NET MAUI -->
     <UseMaui>true</UseMaui>
+    <!--#if (Net8 && !CentralPkgMgmt && Nightly)-->
+    <MauiVersion>8.0.*-*</MauiVersion>
+    <!--#endif-->
     <SingleProject>true</SingleProject>
     <EnableDefaultItems>false</EnableDefaultItems>
 
