--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -102,6 +102,9 @@
         <!--#else-->
         <UseMaui>true</UseMaui>
         <!--#endif-->
+        <!--#if (Net8 && !CentralPkgMgmt && Nightly)-->
+        <MauiVersion>8.0.*-*</MauiVersion>
+        <!--#endif-->
         <SingleProject>true</SingleProject>
         <!--#if (Net8 && (AllPlatforms || IsWindows))-->
         <UseRidGraph>true</UseRidGraph>
