--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -1,6 +1,9 @@
 <Project>
     <PropertyGroup>
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <!--#if (Net8 && Nightly)-->
+        <MauiVersion>8.0.4-nightly</MauiVersion>
+        <!--#endif-->
     </PropertyGroup>
     <ItemGroup>
         <PackageVersion Include="Xamarin.Forms" Version="5.0.0.2622" />
@@ -23,7 +26,7 @@
         <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.0.0" />
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.1.0" />
         <!--#endif-->
         <!--#elif (Net7)-->
         <!--#if (AddMauiToolkit)-->
