--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /src/MauiTemplatesCLI/Push-Release-Template.bat
+/dotnet-maui-templates.code-workspace
