--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -93,8 +93,12 @@
 
         <!-- .NET MAUI -->
         <UseMaui>true</UseMaui>
-        <!--#if (Net8 && !CentralPkgMgmt && Nightly)-->
+        <!--#if (Net8 && !CentralPkgMgmt)-->
+        <!--#if (Nightly)-->
         <MauiVersion>8.*-*</MauiVersion>
+        <!--#else-->
+        <MauiVersion>8.0.6</MauiVersion>
+        <!--#endif-->
         <!--#endif-->
         <SingleProject>true</SingleProject>
         <!--#if (Hybrid || Razor)-->
