--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -94,8 +94,12 @@
 
     <!-- .NET MAUI -->
     <UseMaui>true</UseMaui>
-    <!--#if (Net8 && !CentralPkgMgmt && Nightly)-->
+    <!--#if (Net8 && !CentralPkgMgmt)-->
+    <!--#if (Nightly)-->
     <MauiVersion>8.*-*</MauiVersion>
+    <!--#else-->
+    <MauiVersion>8.0.6</MauiVersion>
+    <!--#endif-->
     <!--#endif-->
     <SingleProject>true</SingleProject>
     <EnableDefaultItems>false</EnableDefaultItems>
