--- a/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
+++ b/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
@@ -52,6 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomActionWizard.cs" />
+    <Compile Include="GenericItemDialog.xaml.cs">
+      <DependentUpon>GenericItemDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source.extension.cs">
       <AutoGen>True</AutoGen>
@@ -81,7 +84,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
     </Content>
-    <Content Include="ItemTemplates\MauiPageXaml.zip">
+    <Content Include="ItemTemplates\MauiPage.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
@@ -90,7 +93,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="ItemTemplates\MauiViewXaml.zip">
+    <Content Include="ItemTemplates\MauiView.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
@@ -236,24 +239,24 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="ItemTemplates\MauiHandler.zip">
-      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <VSIXSubPath>ItemTemplates\MAUI\Advanced</VSIXSubPath>
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ItemTemplates\MauiHandlerReg.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <VSIXSubPath>ItemTemplates\MAUI\Advanced</VSIXSubPath>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="ItemTemplates\MauiRendererReg.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
-      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <VSIXSubPath>ItemTemplates\MAUI\Advanced</VSIXSubPath>
     </Content>
     <Content Include="ItemTemplates\MauiRenderer.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
-      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <VSIXSubPath>ItemTemplates\MAUI\Advanced</VSIXSubPath>
     </Content>
     <Content Include="ItemTemplates\MauiPageWithViewModel.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -317,10 +320,20 @@
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>ItemTemplates\MAUI\Hybrid</VSIXSubPath>
     </Content>
-    <Content Include="ItemTemplates\MauiBlazorWebViewXaml.zip">
+    <Content Include="ItemTemplates\MauiBlazorWebView.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>ItemTemplates\MAUI\Hybrid</VSIXSubPath>
+    </Content>
+    <Content Include="ItemTemplates\MauiItem.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+    </Content>
+    <Content Include="ItemTemplates\MauiItemCS.zip">
+      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
@@ -338,8 +351,10 @@
     <None Include="vijayanand.snk" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
-    <Reference Include="System.Design" />
+    <Reference Include="System.Xaml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Community.VisualStudio.Toolkit" Version="17.0.75.152-pre" ExcludeAssets="Runtime" />
@@ -351,7 +366,12 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="GenericItemDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- For distributing NuGet package loaded with CLI Templates -->
